syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.apiteste";
option java_outer_classname = "Apiteste";
option objc_class_prefix = "HLW";

package com.apiteste;

service FormService {
  rpc sendForm (SendFormRequest) returns (SendFormResponse) {}
}

message SendFormRequest {
  string name = 1;
  string json_form = 2;
}

message SendFormResponse {
  string message = 1;
}